--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -6,64 +6,8 @@
     font-style: normal;
     font-weight: normal;
 }
-.preloader-wrapper {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    outline: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.preloader {
-    border: 7.5px solid;
-    height: 10rem;
-    width: 10rem;
-    border-radius: 100%;
-    animation-name: pulse-ring;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-        margin: 0;
-    outline 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-@keyframes pulse-ring {
-0% {
-    border-color: rgba(255, 255, 255, 0.5);
-    transform: scale(1);
-    box-shadow: 2px 2px 10px 0 #fffbfb, inset 2px 2px 10px #fffbfb;
-}
-25% {
-    transform: scale(0.98);
-    box-shadow: 2px 2px 10px 2.5px #fffbfb, inset 2px 2px 12px #fffbfb;
-}
-50% {
-    border-color: rgba(255, 255, 255, 0.75);
-    transform: scale(1);
-    box-shadow: 2px 2px 10px 5px #fffbfb, inset 2px 2px 10px #fffbfb;
-}
-75% {
-    transform: scale(0.98);
-    box-shadow: 2px 2px 10px 2.5px #fffbfb, inset 2px 2px 12px #fffbfb;
-}
-100% {
-    border-color: rgba(255, 255, 255, 0.5);
-    transform: scale(1);
-    box-shadow: 2px 2px 10px 0 #fffbfb, inset 2px 2px 10px #fffbfb;
-}
-}
-.error-message {
-    font-size: 25px;
-    color: white;
-    font-family: sans-serif;
-    font-weight: bold;
-    text-align: center;
-}
+
+
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
@@ -232,6 +176,73 @@ template, [hidden] {
     height: 1134px;
     color: #ffffff;
     background: url("../images/main/slide1.jpg") center/cover no-repeat;
+}
+.header-contacts__arrow.active img {
+    transform: rotate(180deg);
+}
+.header-contacts__phone-number-accord.active {
+    top: 30px;
+}
+.header-contacts__phone-number.active {
+    opacity: 1;
+}
+.preloader-wrapper {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    outline: 0;
+    border: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.preloader {
+    border: 7.5px solid;
+    height: 10rem;
+    width: 10rem;
+    border-radius: 100%;
+    animation-name: pulse-ring;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+        margin: 0;
+    outline 0;
+    border: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+@keyframes pulse-ring {
+0% {
+    border-color: rgba(255, 255, 255, 0.5);
+    transform: scale(1);
+    box-shadow: 2px 2px 10px 0 #fffbfb, inset 2px 2px 10px #fffbfb;
+}
+25% {
+    transform: scale(0.98);
+    box-shadow: 2px 2px 10px 2.5px #fffbfb, inset 2px 2px 12px #fffbfb;
+}
+50% {
+    border-color: rgba(255, 255, 255, 0.75);
+    transform: scale(1);
+    box-shadow: 2px 2px 10px 5px #fffbfb, inset 2px 2px 10px #fffbfb;
+}
+75% {
+    transform: scale(0.98);
+    box-shadow: 2px 2px 10px 2.5px #fffbfb, inset 2px 2px 12px #fffbfb;
+}
+100% {
+    border-color: rgba(255, 255, 255, 0.5);
+    transform: scale(1);
+    box-shadow: 2px 2px 10px 0 #fffbfb, inset 2px 2px 10px #fffbfb;
+}
+}
+.error-message {
+    font-size: 25px;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
 }
 
 @media (max-width: 1024px) {
