--- a/layout/admin/table.html
+++ b/layout/admin/table.html
@@ -210,10 +210,11 @@
 					<input id="cost" class="input input__cost" placeholder="Цена*">
 				</label>
 
-				<button class="button button-ui_firm"><span>Сохранить</span></button>
+				<button type='submit' class="button button-ui_firm"><span>Сохранить</span></button>
 				<button class="button cancel-button"><span>Отмена</span></button>
 			</form>
 		</div>
 	</div>
+	<script src="table.js"></script>
 </body>
 </html>
