--- a/layout/admin/index.html
+++ b/layout/admin/index.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Вход</title>
 	<link rel="stylesheet" href="styles/index.css">
-
 </head>
 <body class="body-auth">
 	<main class="main-auth">
@@ -28,5 +27,6 @@
 			</form>
 		</section>
 	</main>
+	<script src="index.js"></script>
 </body>
 </html>
